<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/alert_view_you_have_arrived"
            android:textColor="@color/textColorSecondary"
            android:textSize="18sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="Location"
            android:textColor="@color/textColorPrimary"
            android:textSize="28sp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/dismiss_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_weight="6"
        android:background="@drawable/background_shape_list_item"
        android:gravity="center"
        android:text="@string/alert_view_dismiss"
        android:textColor="@color/textColorPrimary"
        android:textSize="28sp" />

    <Button
        android:id="@+id/snooze_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:background="@drawable/background_shape_list_item"
        android:gravity="center"
        android:text="@string/alert_view_snoozed"
        android:textColor="@color/textColorPrimary"
        android:textSize="24sp" />
</LinearLayout>