<?xml version="1.0" encoding="utf-8"?><!-- Use DrawerLayout as root container for activity -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".drawer_activities.InfoActivity">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            app:subtitle="@string/subtitletitle_info_activity"
            app:subtitleTextColor="@color/colorAccentDisable"
            app:title="@string/app_name"
            app:titleTextColor="@color/colorAccentDisable" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:layout_marginTop="56dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/textColorPrimary"
                android:gravity="center"
                android:textSize="28sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textColor="@color/textColorSecondary"
                android:gravity="center"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="16dp"
                android:background="#50FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_activity_developed_by"
                android:textColor="@color/textColorSecondary"
                android:gravity="center"
                android:textSize="22sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_activity_shady_boshra"
                android:textColor="@color/textColorPrimary"
                android:gravity="center"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_margin="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/facebook_img"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:src="@drawable/fb"
                    android:layout_weight="1"
                    android:elevation="5dp"/>
                <ImageView
                    android:id="@+id/twitter_img"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:src="@drawable/twitter"
                    android:layout_weight="1"
                    android:elevation="5dp"/>
                <ImageView
                    android:id="@+id/linked_in_img"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:src="@drawable/in"
                    android:layout_weight="1"
                    android:elevation="5dp"/>
                <ImageView
                    android:id="@+id/mail_img"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:src="@drawable/mail"
                    android:layout_weight="1"
                    android:elevation="5dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_activity_feedback"
                android:textColor="@color/textColorSecondary"
                android:gravity="center"
                android:textSize="22sp"
                android:layout_marginTop="30dp"/>
        </LinearLayout>

    </FrameLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/menu_main" />

</androidx.drawerlayout.widget.DrawerLayout>