<?xml version="1.0" encoding="utf-8"?><!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            app:subtitle="@string/subtitletitle_activity_main"
            app:subtitleTextColor="@color/colorAccentDisable"
            app:title="@string/app_name"
            app:titleTextColor="@color/colorAccentDisable" />

        <RelativeLayout
            android:id="@+id/no_alarm_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/main_photo_img"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:src="@drawable/main_photo" />

            <TextView
                android:id="@+id/no_location_alarms_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_photo_img"
                android:layout_centerInParent="true"
                android:layout_marginTop="12dp"
                android:text="@string/main_activity_no_location_alarms"
                android:textColor="@color/textColorPrimary"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/no_location_alarms_text"
                android:layout_centerInParent="true"
                android:padding="12dp"
                android:text="@string/main_activity_create_alarm"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:textSize="14sp" />
        </RelativeLayout>

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:orientation="vertical"
            android:paddingBottom="24dp"
            android:paddingTop="8dp"
            android:visibility="gone">

        </ListView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_new_alarm"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/baseline_alarm_add_white_48"
            app:backgroundTint="@color/colorAccent" />

        <!-- view for AdMob Banner Ad -->
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="80dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />

    </FrameLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/menu_main" />

</android.support.v4.widget.DrawerLayout>